--- a/app.css
+++ b/app.css
@@ -91,9 +91,7 @@ main {
     height: 100%;
     width: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow-y: auto;
+    overflow-y: scroll;
 }
 
 .nabidka {
@@ -241,6 +239,24 @@ footer {
 
 .contFoot p {
     margin: 20px;
+}
+
+.contObjed {
+    width: 100%;
+    height: 100%;
+    background-color: lightgray;
+    display: flex;
+    justify-content: center;
+    overflow-y: scroll;
+}
+
+.contObjed fieldset {
+    margin: 10px;
+}
+
+th,
+td {
+    padding: 5px;
 }
 
 @media screen and (max-width:1300px) {
